objects/Job_Posting__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closing_Date__c</fullName>
        <label>Closing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Posting__c</fullName>
        <label>Date of Posting</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <label>Job Title</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <label>Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Job Postings</relationshipLabel>
        <relationshipName>Job_Postings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Qualification__c</fullName>
        <globalPicklist>Qualifications</globalPicklist>
        <label>Qualification</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Qualifications__c</fullName>
        <description>This is what the company job description says and is not used in matching. An algorithm will create records in the Qualifications data.</description>
        <inlineHelpText>This is what the company job description says and is not used in matching. An algorithm will create records in the Qualifications data.</inlineHelpText>
        <label>Qualifications</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Source_URL__c</fullName>
        <inlineHelpText>The page for this job posting at a third party website</inlineHelpText>
        <label>Source URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>Alabama 
Alaska 
Arizona 
Arkansas 
California 
Colorado 
Connecticut 
Delaware 
Florida 
Georgia 
Hawaii 
Idaho 
Illinois
Indiana 
Iowa 
Kansas 
Kentucky 
Louisiana 
Maine 
Maryland 
Massachusetts 
Michigan 
Minnesota 
Mississippi 
Missouri 
Montana
Nebraska 
Nevada 
New Hampshire 
New Jersey 
New Mexico 
New York 
North Carolina 
North Dakota 
Ohio 
Oklahoma 
Oregon 
Pennsylvania
Rhode Island 
South Carolina 
South Dakota 
Tennessee 
Texas 
Utah 
Vermont 
Virginia 
Washington 
West Virginia 
Wisconsin 
Wyoming</description>
        <inlineHelpText>Please select a a state from the picklist</inlineHelpText>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>CA</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>Summary</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Who_Input__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This will go away once we have more users</description>
        <inlineHelpText>This will go away once we have more users</inlineHelpText>
        <label>Who Input</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Who Input Job Postings</relationshipLabel>
        <relationshipName>Job_Postings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <description>Zip code</description>
        <label>Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Job Posting</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Organization__c</columns>
        <columns>City__c</columns>
        <columns>Job_Title__c</columns>
        <columns>Date_of_Posting__c</columns>
        <columns>Closing_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Empty_cities</fullName>
        <columns>NAME</columns>
        <columns>Organization__c</columns>
        <columns>City__c</columns>
        <columns>Date_of_Posting__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>City__c</field>
            <operation>equals</operation>
        </filters>
        <label>Empty cities</label>
    </listViews>
    <listViews>
        <fullName>Help_Desk</fullName>
        <columns>NAME</columns>
        <columns>Job_Title__c</columns>
        <columns>Organization__c</columns>
        <columns>Date_of_Posting__c</columns>
        <columns>City__c</columns>
        <columns>Closing_Date__c</columns>
        <columns>Source_URL__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Job_Title__c</field>
            <operation>contains</operation>
            <value>Help Desk Analyst</value>
        </filters>
        <filters>
            <field>Job_Title__c</field>
            <operation>contains</operation>
            <value>Help Desk</value>
        </filters>
        <label>Help Desk</label>
    </listViews>
    <listViews>
        <fullName>Salesforce</fullName>
        <columns>NAME</columns>
        <columns>Job_Title__c</columns>
        <columns>Organization__c</columns>
        <columns>Date_of_Posting__c</columns>
        <columns>City__c</columns>
        <columns>Source_URL__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Job_Title__c</field>
            <operation>contains</operation>
            <value>Salesforce</value>
        </filters>
        <filters>
            <field>Job_Title__c</field>
            <operation>contains</operation>
            <value>Salesforce Administrator</value>
        </filters>
        <label>Salesforce</label>
    </listViews>
    <listViews>
        <fullName>San_Francisco</fullName>
        <columns>NAME</columns>
        <columns>Job_Title__c</columns>
        <columns>City__c</columns>
        <columns>Organization__c</columns>
        <columns>Closing_Date__c</columns>
        <columns>Date_of_Posting__c</columns>
        <columns>Source_URL__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>City__c</field>
            <operation>equals</operation>
            <value>San Francisco</value>
        </filters>
        <label>San Francisco</label>
    </listViews>
    <nameField>
        <displayFormat>Job-{00000}</displayFormat>
        <label>Job Posting Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Postings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>